--- a/package.json
+++ b/package.json
@@ -8,14 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
-    "@imgly/background-removal-node": "^1.4.5",
-    "canvas": "^2.11.2",
     "geist": "^1.5.1",
     "next": "14.1.0",
     "openai": "^6.8.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "sharp": "^0.33.5"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.17",
